结算中心－收货地址／优惠券／发票／金额／支付方式

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -101,6 +101,7 @@
         <script src="services/adv.js"></script>
         <script src="services/consignee.js"></script>
         <script src="services/taobao.js"></script>
+        <script src="services/coupon.js"></script>
 
         <script src="directives/switcher.js"></script>
         <script src="directives/dynamicHeight.js"></script>
@@ -133,6 +134,7 @@
         <script src="directives/focusScrollTop.js"></script>
         <script src="directives/cmMap.js"></script>
         <script src="directives/pushBackground.js"></script>
+        <script src="directives/cmResizeHeight.js"></script>
         <script src="directives/caculateHeight.js"></script>
         <script src="directives/dynamicTabs.js"></script>
         <script src="directives/addToCart.js"></script>
@@ -191,6 +193,8 @@
         <script src="controllers/paymentOrderFail.js"></script>
         <script src="controllers/choosePayment.js"></script>
         <script src="controllers/checkoutConsigneeList.js"></script>
+        <script src="controllers/invoice.js"></script>
+        <script src="controllers/checkoutCoupon.js"></script>
 
         <script src="controllers/purchasedList.js"></script>
         <script src="controllers/videoList.js"></script>
