结算中心－优惠券／提交订单

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -195,6 +195,7 @@
         <script src="controllers/checkoutConsigneeList.js"></script>
         <script src="controllers/invoice.js"></script>
         <script src="controllers/checkoutCoupon.js"></script>
+        <script src="controllers/checkoutAmount.js"></script>
 
         <script src="controllers/purchasedList.js"></script>
         <script src="controllers/videoList.js"></script>
