--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -183,6 +183,7 @@
         <script src="controllers/consigneeAdd.js"></script>
         <script src="controllers/selectAddressRegion.js"></script>
         <script src="controllers/downloadVideoList.js"></script>
+        <script src="controllers/couponList.js"></script>
 
         <script src="controllers/login.js"></script>
         <script src="controllers/register.js"></script>
