会员中心－观看记录

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -102,6 +102,7 @@
         <script src="services/consignee.js"></script>
         <script src="services/taobao.js"></script>
         <script src="services/coupon.js"></script>
+        <script src="services/video.js"></script>
 
         <script src="directives/switcher.js"></script>
         <script src="directives/dynamicHeight.js"></script>
@@ -184,6 +185,7 @@
         <script src="controllers/selectAddressRegion.js"></script>
         <script src="controllers/downloadVideoList.js"></script>
         <script src="controllers/couponList.js"></script>
+        <script src="controllers/viewVideoList.js"></script>
 
         <script src="controllers/login.js"></script>
         <script src="controllers/register.js"></script>
