--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -103,6 +103,7 @@
         <script src="services/taobao.js"></script>
         <script src="services/coupon.js"></script>
         <script src="services/video.js"></script>
+        <script src="services/mall.js"></script>
 
         <script src="directives/switcher.js"></script>
         <script src="directives/dynamicHeight.js"></script>
@@ -205,6 +206,8 @@
         <script src="controllers/videoInfo.js"></script>
 
         <script src="controllers/sliderList.js"></script>
+
+        <script src="controllers/mallIndex.js"></script>
 
         <script src="controllers/upgrade.js"></script>
         <!-- endbuild -->
