商城－分类页

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -208,6 +208,7 @@
         <script src="controllers/sliderList.js"></script>
 
         <script src="controllers/mallIndex.js"></script>
+        <script src="controllers/mallSortList.js"></script>
 
         <script src="controllers/upgrade.js"></script>
         <!-- endbuild -->
