--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -209,6 +209,7 @@
 
         <script src="controllers/mallIndex.js"></script>
         <script src="controllers/mallSortList.js"></script>
+        <script src="controllers/mallSearchList.js"></script>
 
         <script src="controllers/upgrade.js"></script>
         <!-- endbuild -->
