--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -159,7 +159,7 @@
         <script src="controllers/categoryList.js"></script>
         <script src="controllers/authorList.js"></script>
         <script src="controllers/productInfo.js"></script>
-        <script src="controllers/suitInfo.js"></script>
+        <script src="controllers/teacherInfo.js"></script>
         <script src="controllers/freeList.js"></script>
         <script src="controllers/freeInfo.js"></script>
         <script src="controllers/comment.js"></script>
@@ -202,8 +202,9 @@
         <script src="controllers/checkoutAmount.js"></script>
 
         <script src="controllers/purchasedList.js"></script>
-        <script src="controllers/videoList.js"></script>
+        <script src="controllers/exchangeVideoList.js"></script>
         <script src="controllers/videoInfo.js"></script>
+        <script src="controllers/packageVideoList.js"></script>
 
         <script src="controllers/sliderList.js"></script>
 
