--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -146,6 +146,7 @@
         <script src="directives/cmClearCache.js"></script>
         <script src="directives/cmVideo.js"></script>
         <script src="directives/cmCaculateTop.js"></script>
+        <script src="directives/cmAudio.js"></script>
 
         <script src="filters/textFormat.js"></script>
         <script src="filters/addressFormat.js"></script>
