视频播放－优化所有视频播放页面（试读／视频音频详情／套餐页）

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -7,7 +7,7 @@
         <meta name="format-detection" content="telephone=no">
         <title>半月谈教育</title>
 
-        <link rel="stylesheet" href="libs/videogular-themes-default/videogular.css">
+        <!-- 修改TcPlayer时，需要把插件中的路径改成绝对路径，手动修改 -->
 
         <!-- build:js rem.js -->
         <script src="rem.js"></script>
@@ -52,7 +52,7 @@
         <script src="lang.zh-CN.js"></script>
         <script src="stateCode.js"></script>
         <script src="mime.js"></script>
-        <script src="TcPlayer.js"></script>
+        <script src="TcPlayer-2.2.0.js"></script>
 
         <!-- mobile module's files -->
         <script src="init-mobile.js"></script>
@@ -217,6 +217,7 @@
         <script src="controllers/upgrade.js"></script>
         <!-- endbuild -->
 
+        <link rel="stylesheet" href="libs/videogular-themes-default/videogular.css">
         <link rel="stylesheet" href="resources/css/main.css" />
 
     </head>
