友盟统计分析

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -81,7 +81,7 @@
         <!-- <script src="tools/jpush.js"></script> -->
         <script src="tools/imagePicker.js"></script>
         <script src="tools/connection.js"></script>
-        <!-- <script src="tools/analytics.js"></script> -->
+        <script src="tools/analytics.js"></script>
         <!-- <script src="tools/taobaoOpenPlatform.js"></script> -->
         <script src="tools/imageLoader.js"></script>
         <script src="tools/cookieUtils.js"></script>
