--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -205,7 +205,7 @@
         <script src="controllers/purchasedList.js"></script>
         <script src="controllers/exchangeVideoList.js"></script>
         <script src="controllers/videoInfo.js"></script>
-        <script src="controllers/packageVideoList.js"></script>
+        <script src="controllers/courseVideo.js"></script>
         <script src="controllers/courseAudio.js"></script>
 
         <script src="controllers/sliderList.js"></script>
