--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -34,9 +34,6 @@
         <script src="libs/cm-switch/src/switch.js"></script>
         <script src="libs/ng-flow/dist/ng-flow-standalone.js"></script>
         <script src="libs/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
-        <script src="libs/videogular/videogular.js"></script>
-        <script src="libs/videogular-controls/vg-controls.js"></script>
-        <script src="libs/videogular-overlay-play/vg-overlay-play.js"></script>
         <script src="libs/ngCordova/dist/ng-cordova.js"></script>
         <!-- endbuild -->
 
@@ -52,7 +49,7 @@
         <script src="lang.zh-CN.js"></script>
         <script src="stateCode.js"></script>
         <script src="mime.js"></script>
-        <script src="TcPlayer-2.2.0.js"></script>
+        <script src="hivideo.js"></script>
 
         <!-- mobile module's files -->
         <script src="init-mobile.js"></script>
@@ -218,7 +215,6 @@
         <script src="controllers/upgrade.js"></script>
         <!-- endbuild -->
 
-        <link rel="stylesheet" href="libs/videogular-themes-default/videogular.css">
         <link rel="stylesheet" href="resources/css/main.css" />
 
     </head>
