微信登录绑定手机号

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -176,6 +176,7 @@
         <script src="controllers/exchangeRecordList.js"></script>
         <script src="controllers/feedback.js"></script>
         <script src="controllers/modifyPwd.js"></script>
+        <script src="controllers/wechatBindMobile.js"></script>
         <script src="controllers/userAccountSetting.js"></script>
         <script src="controllers/aboutUs.js"></script>
         <script src="controllers/version.js"></script>
