收货地址－添加编辑功能

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -182,6 +182,7 @@
         <script src="controllers/version.js"></script>
         <script src="controllers/userConsigneeList.js"></script>
         <script src="controllers/consigneeAdd.js"></script>
+        <script src="controllers/consigneeEdit.js"></script>
         <script src="controllers/selectAddressRegion.js"></script>
         <script src="controllers/downloadVideoList.js"></script>
         <script src="controllers/couponList.js"></script>
