新增－领取优惠券

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -215,6 +215,7 @@
         <script src="controllers/mallProductInfo.js"></script>
 
         <script src="controllers/upgrade.js"></script>
+        <script src="controllers/startEvent.js"></script>
         <!-- endbuild -->
 
         <link rel="stylesheet" href="resources/css/main.css" />
