添加微信分享－使用微信sdk分享

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -216,6 +216,8 @@
 
         <script src="controllers/upgrade.js"></script>
         <script src="controllers/startEvent.js"></script>
+
+        <script src="controllers/shareEvent.js"></script>
         <!-- endbuild -->
 
         <link rel="stylesheet" href="resources/css/main.css" />
