--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -100,6 +100,7 @@
         <script src="services/coupon.js"></script>
         <script src="services/video.js"></script>
         <script src="services/mall.js"></script>
+        <script src="services/userAccount.js"></script>
 
         <script src="directives/switcher.js"></script>
         <script src="directives/dynamicHeight.js"></script>
@@ -186,6 +187,9 @@
         <script src="controllers/downloadVideoList.js"></script>
         <script src="controllers/couponList.js"></script>
         <script src="controllers/viewVideoList.js"></script>
+        <script src="controllers/userAccount.js"></script>
+        <script src="controllers/userAccountPurchasedList.js"></script>
+        <script src="controllers/userAccountBindPay.js"></script>
 
         <script src="controllers/login.js"></script>
         <script src="controllers/register.js"></script>
