优化发送短信验证码－添加md5加密

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -80,6 +80,7 @@
         <!-- <script src="tools/taobaoOpenPlatform.js"></script> -->
         <script src="tools/imageLoader.js"></script>
         <script src="tools/cookieUtils.js"></script>
+        <script src="tools/encrypt.js"></script>
 
         <script src="services/global.js"></script>
         <script src="services/index.js"></script>
