--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -81,6 +81,7 @@
         <script src="tools/imageLoader.js"></script>
         <script src="tools/cookieUtils.js"></script>
         <script src="tools/encrypt.js"></script>
+        <script src="tools/smartIap.js"></script>
 
         <script src="services/global.js"></script>
         <script src="services/index.js"></script>
